--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   name             : "Dayu Hu(胡达宇)"
   avatar           : "images/jay.jpeg"
   bio              : "NUDT University"
-  location         : "Hangzhou"
+  location         : "Changsha"
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=SCHOLAR_ID&user=AKdv5-0AAAAJ"
